conversion.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conversion-deployment
  labels:
    app: conversion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conversion
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: conversion
    spec:
      containers:
        - name: conversion
          image: in28min/aws-currency-conversion-service-xray:0.0.1-SNAPSHOT
          ports:
            - containerPort: 8100
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "500Mi"
              cpu: "200m"
