exchange.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exchange-api
  labels:
    app: exchange
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exchange
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: exchange
    spec:
      containers:
        - name: exchange
          image: CONTAINER_IMAGE
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "500Mi"
              cpu: "200m"
