lastexchange.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exchange-api
  labels:
    app: exchange
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exchange
  template:
    metadata:
      labels:
        app: exchange
    spec:
      containers:
        - name: exchange
          image: CONTAINER_IMAGE
          ports:
            - containerPort: 8000
