cvvn.yml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: conversion
  namespace: prod
spec:
  awsName: conversion
  provider:
    virtualNode:
      virtualNodeRef:
        name: conversion
