exvn.yml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: exchange
  namespace: prod
spec:
  awsName: exchange
  provider:
    virtualNode:
      virtualNodeRef:
        name: exchange
